# php-extension-builder

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  docker-bake.hcl
.github/workflows/: docker-images.yml  release.yml  test.yml
docker/: Dockerfile
src/: backend.rs  cli.rs  composer.rs  deb_package.rs  lib.rs  main.rs  package.rs  rust_ext.rs  zip_package.rs
