[package]
name = "php-extension-builder"
version = "0.1.0"
edition = "2024"
description = "Build PHP extension pre-packaged binaries from Rust"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
