[package]
name = "php-extension-builder"
version = "0.1.0"
edition = "2024"
description = "Build PHP extension pre-packaged binaries from Rust"
license = "MIT"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
mod_module_files = "deny"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
